<resources>
    <string name="app_name">Katalog Film</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="movies">Movies</string>
    <string name="tvs">Tv Shows</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite_tvs">Favorite Tv</string>
    <string name="release">Release %s</string>
    <string name="title_activity_detail_film">Detail Film</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
